gac_sb/objects/Mission__c.object
<CustomObject>
    <description>SF CONSULTING - Cet objet contient toutes les informations des missions (infos spécifiques des BU, année concernée, CA facturé, encaissé, prev., etc...)</description>
    <fields>
        <fullName>AT_Advance__c</fullName>
        <description>Cocher la case si le client souhaite utiliser l&apos;application AT Advance.</description>
        <inlineHelpText>Cocher la case si le client souhaite utiliser l&apos;application AT Advance.</inlineHelpText>
        <label>AT Advance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gratuit</fullName>
                </value>
                <value>
                    <fullName>Payant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_lost__c</fullName>
        <label>Amount lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annee_concernee__c</fullName>
        <inlineHelpText>Années correspondantes à la mission</inlineHelpText>
        <label>Année concernée</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
                <value>
                    <fullName>FINEP</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplicationLoiAutoInnovate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uso da Lei Inovar Auto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apporteur_d_affaires__c</fullName>
        <formula>TEXT(Contrat__r.Apporteur_d_affaires__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apporteur d&apos;affaires</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprobationFinale__c</fullName>
        <description>Approbation finale</description>
        <label>Aprovação do MCTI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Pendente</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AppuiTechnique__c</fullName>
        <description>Appui technique</description>
        <label>Apoio técnico tercerializado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auditer__c</fullName>
        <label>Auditer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutresDepenses__c</fullName>
        <description>Autres dépenses</description>
        <label>Outros dispêndios</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BeneficeNetAnnee__c</fullName>
        <description>Bénéfice net de l&apos;année</description>
        <label>Lucro Líquido do ano</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BrevetInvention__c</fullName>
        <label>Patente de invenção</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BrevetModel__c</fullName>
        <description>Brevet de modèle ou d&apos;utilité</description>
        <label>Patente de modelo de utilidade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_adopt__c</fullName>
        <description>ESPAGNE</description>
        <label>Budget adopté</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bureau__c</fullName>
        <formula>Text(Contrat__r.Bureau__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Champ Bureau des contrats</inlineHelpText>
        <label>Bureau</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_2014__c</fullName>
        <inlineHelpText>Somme des planifications de facturation pour l&apos;année 2014</inlineHelpText>
        <label>CA 2014</label>
        <summarizedField>Prevision_de_facturation__c.Prevision_HT__c</summarizedField>
        <summaryFilterItems>
            <field>Prevision_de_facturation__c.Annee_pr_vue__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </summaryFilterItems>
        <summaryForeignKey>Prevision_de_facturation__c.Mission__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CA_2015__c</fullName>
        <description>Somme des planifications de facturation pour l&apos;année 2015</description>
        <label>CA 2015</label>
        <summarizedField>Prevision_de_facturation__c.Prevision_HT__c</summarizedField>
        <summaryFilterItems>
            <field>Prevision_de_facturation__c.Annee_pr_vue__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </summaryFilterItems>
        <summaryForeignKey>Prevision_de_facturation__c.Mission__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CA_2016__c</fullName>
        <description>Somme des planifications de facturation pour l&apos;année 2016</description>
        <label>CA 2016</label>
        <summarizedField>Prevision_de_facturation__c.Prevision_HT__c</summarizedField>
        <summaryFilterItems>
            <field>Prevision_de_facturation__c.Annee_pr_vue__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </summaryFilterItems>
        <summaryForeignKey>Prevision_de_facturation__c.Mission__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CA_Total__c</fullName>
        <formula>CA_facture__c +  CA_facture_en_attente__c +  CA_planifie__c + C_A_HGNF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_encaisse__c</fullName>
        <label>CA encaissé</label>
        <summarizedField>Facture__c.Montant_encaisse_HT__c</summarizedField>
        <summaryForeignKey>Facture__c.Mission__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CA_estim_Commercial__c</fullName>
        <label>CA estimé Commercial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_estim_Consultant__c</fullName>
        <description>ESPAGNE</description>
        <label>CA estimé Consultant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_facture__c</fullName>
        <inlineHelpText>Chiffre d&apos;affaire déjà facturé</inlineHelpText>
        <label>CA facturé</label>
        <summarizedField>Facture__c.Montant_HT__c</summarizedField>
        <summaryFilterItems>
            <field>Facture__c.Statut__c</field>
            <operation>notEqual</operation>
            <value>En attente</value>
        </summaryFilterItems>
        <summaryForeignKey>Facture__c.Mission__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CA_facture_en_attente__c</fullName>
        <label>CA facturé (en attente)</label>
        <summarizedField>Facture__c.Montant_HT__c</summarizedField>
        <summaryFilterItems>
            <field>Facture__c.Statut__c</field>
            <operation>equals</operation>
            <value>En attente</value>
        </summaryFilterItems>
        <summaryForeignKey>Facture__c.Mission__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CA_planifie__c</fullName>
        <inlineHelpText>Chiffre d&apos;affaire à facturer planifié</inlineHelpText>
        <label>CA reste à facturer</label>
        <summarizedField>Prevision_de_facturation__c.Prevision_HT__c</summarizedField>
        <summaryFilterItems>
            <field>Prevision_de_facturation__c.Statut__c</field>
            <operation>equals</operation>
            <value>Prévue</value>
        </summaryFilterItems>
        <summaryForeignKey>Prevision_de_facturation__c.Mission__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>C_A_HGNF__c</fullName>
        <description>Champ canadien prenant la somme des montant  HGNF sur la planification de facturation</description>
        <label>C.A HGNF</label>
        <summarizedField>Prevision_de_facturation__c.Montant_HGNF__c</summarizedField>
        <summaryFilterItems>
            <field>Prevision_de_facturation__c.Statut__c</field>
            <operation>equals</operation>
            <value>HGNF</value>
        </summaryFilterItems>
        <summaryForeignKey>Prevision_de_facturation__c.Mission__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Calendrier_reporting__c</fullName>
        <label>Calendrier reporting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Semestriel</fullName>
                </value>
                <value>
                    <fullName>Annuel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_de_mission__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Impostos Direitos</fullName>
                </value>
                <value>
                    <fullName>Impostos Indireitos</fullName>
                </value>
                <value>
                    <fullName>Previdenciaria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CertificatRegularite__c</fullName>
        <label>Certidões negativos</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_O2T__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client O2T</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloture_fiscale__c</fullName>
        <description>Clôture fiscale</description>
        <label>Fechamento fiscal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mensal</fullName>
                </value>
                <value>
                    <fullName>Trimestral</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_NetE_recu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code Net-E reçu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ComentarioConfecao__c</fullName>
        <label>Comentário</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireAnalyseProjet__c</fullName>
        <description>Commentaire des analyses d&apos;opportunité</description>
        <label>Comentário Análise das oportunidades</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireApprobation__c</fullName>
        <description>Commentaire relatif à l&apos;approbation finale</description>
        <label>Comentário Aprovação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireAutreDepense__c</fullName>
        <description>Commentaire relatif au autres dépenses</description>
        <label>Comentário  Outros Dispêndios</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireBeneficePrevu__c</fullName>
        <label>Comentário previsão de Lucro</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireBeneficeTotal__c</fullName>
        <label>Comentário valores se prejuízo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireBenefice__c</fullName>
        <label>Comentário Lucro</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireBrevetInvention__c</fullName>
        <description>Commentaire relatif au brevet d&apos;invention</description>
        <label>Comentário Patentes e registros</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireBrevetModel__c</fullName>
        <description>Commentaire relatif au brevet model</description>
        <label>Comentário Patente de modelo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireDeduction__c</fullName>
        <description>Commentaire realtif à la déduction</description>
        <label>Comentário % Dedução</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireFiscalite__c</fullName>
        <description>Commentaire Fiscalité</description>
        <label>Comentário Fiscalização</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireMaterielConsomme__c</fullName>
        <description>Commentaire relatif aux matériels consommmés</description>
        <label>Comentário Material consumo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireMissionNonActive__c</fullName>
        <description>Commentaire si la mission n&apos;est pas active</description>
        <label>Comentário se projeto não ativo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentairePerimetre__c</fullName>
        <label>Comentário perímetro</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentairePreparation__c</fullName>
        <label>Comentário condições aproveitamento</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentairePrevisionBenefice__c</fullName>
        <label>Comentário Previsão de Lucro</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireRH__c</fullName>
        <description>Commentaire RH</description>
        <label>Comentário RH</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireRealisationDossier__c</fullName>
        <description>Commentaire réalisation du dossier</description>
        <label>Comentário confecção RIT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireRegistreCulture__c</fullName>
        <description>Commentaire relatif au registre de culture</description>
        <label>Comentário Registro de cultivar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireReunionFinale__c</fullName>
        <description>Commentaire relatif à la réunion finale</description>
        <label>Comentário Reunião de fechamento</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommentaireTerceiros__c</fullName>
        <label>Comentário Terceiros</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commentaire_1_re_entrevue__c</fullName>
        <description>Canada</description>
        <label>Commentaire 1ère entrevue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commentaire__c</fullName>
        <label>Comentário</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commentaire_avis_de_cot_provincial__c</fullName>
        <description>Canada</description>
        <label>Commentaire avis de cot. provincial</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commentaire_avis_de_cotisation_f_d_rale__c</fullName>
        <description>Canada</description>
        <label>Commentaire avis de cotisation fédérale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commentaire_demande_d_information_RQ__c</fullName>
        <description>Canada</description>
        <label>Commentaire demande d&apos;information RQ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commentaire_du_mandat__c</fullName>
        <description>champ Canadien</description>
        <label>Commentaire du mandat</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commentaire_livraison_client__c</fullName>
        <description>Canada</description>
        <label>Commentaire livraison client</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commentaire_livraison_comptable__c</fullName>
        <description>Canada</description>
        <label>Commentaire livraison comptable</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commentaire_production_finance__c</fullName>
        <description>Canada</description>
        <label>Commentaire production finance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commentaire_production_fiscalit__c</fullName>
        <description>Canada</description>
        <label>Commentaire production fiscalité</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commentaire_r_daction_technique__c</fullName>
        <description>Canada</description>
        <label>Commentaire rédaction technique</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commentaire_v_rification__c</fullName>
        <description>Canada</description>
        <label>Commentaire vérification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compte__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compte</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Missions</relationshipLabel>
        <relationshipName>Missions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compte_employeur_recu_ce_mois__c</fullName>
        <formula>Compte__r.Comptes_employeurs_recus_ce_mois__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compte employeur reçu ce mois</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cond_renouvellement__c</fullName>
        <label>Conditions de renouvellement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tacite</fullName>
                </value>
                <value>
                    <fullName>Par nouvel accord</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Written consent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConditionsATA_RPO__c</fullName>
        <description>Renseigner les conditions d&apos;utilisation contractuelles avec le client pour l&apos;application AT Advance ou le service Risk Pro Online.</description>
        <inlineHelpText>Renseigner les conditions d&apos;utilisation contractuelles avec le client pour l&apos;application AT Advance ou le service Risk Pro Online.</inlineHelpText>
        <label>Conditions AT Advance / Risk Pro Online</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conditions_particuli_res__c</fullName>
        <label>Conditions particulières</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conds_facturation__c</fullName>
        <label>Conditions de facturation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dépôt 2069A</fullName>
                </value>
                <value>
                    <fullName>50% au dépôt, le solde à la justification</fullName>
                </value>
                <value>
                    <fullName>Réception des taux AT/MP rectifiés / simulé</fullName>
                </value>
                <value>
                    <fullName>Avis de crédit URSSAF</fullName>
                </value>
                <value>
                    <fullName>70% S + 30% D + Succès</fullName>
                </value>
                <value>
                    <fullName>50% S + 50% D + Succès</fullName>
                </value>
                <value>
                    <fullName>30% S + 70% D + Succès</fullName>
                </value>
                <value>
                    <fullName>à réception accord dégrèvement</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
                <value>
                    <fullName>Dépot COFACE</fullName>
                </value>
                <value>
                    <fullName>à la signature du contrat DI</fullName>
                </value>
                <value>
                    <fullName>à la signature du contrat COFACE</fullName>
                </value>
                <value>
                    <fullName>Pourcentage</fullName>
                </value>
                <value>
                    <fullName>A l&apos;heure</fullName>
                </value>
                <value>
                    <fullName>Mixte</fullName>
                </value>
                <value>
                    <fullName>Notice Of Assessment</fullName>
                </value>
                <value>
                    <fullName>100% NOA reception</fullName>
                </value>
                <value>
                    <fullName>100% Benefit Reception</fullName>
                </value>
                <value>
                    <fullName>50% GAC sending &amp; 50% Submission to IRAS</fullName>
                </value>
                <value>
                    <fullName>50% GAC sending &amp; 50% NOA reception</fullName>
                </value>
                <value>
                    <fullName>50% NOA reception &amp; 50% Benefit Reception</fullName>
                </value>
                <value>
                    <fullName>100% GAC sending</fullName>
                </value>
                <value>
                    <fullName>100% Submission to IRAS</fullName>
                </value>
                <value>
                    <fullName>A l&apos;accord</fullName>
                </value>
                <value>
                    <fullName>Au taux rectifié/simulé</fullName>
                </value>
                <value>
                    <fullName>A l&apos;avis de crédit/remboursement URSSAF</fullName>
                </value>
                <value>
                    <fullName>A échoir</fullName>
                </value>
                <value>
                    <fullName>A échoir avec régularisation MS n-1</fullName>
                </value>
                <value>
                    <fullName>A l’accord avec régularisation MS n-1</fullName>
                </value>
                <value>
                    <fullName>Forfait</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conds_paiement__c</fullName>
        <label>Conditions de paiement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15 dias</fullName>
                </value>
                <value>
                    <fullName>A réception</fullName>
                </value>
                <value>
                    <fullName>A 30 jours</fullName>
                </value>
                <value>
                    <fullName>40% à la livraison du dossier, solde de nos honoraires à la réception de l’avis de cotisation fédéral</fullName>
                </value>
                <value>
                    <fullName>A la réception de l’avis de cotisation fédéral ; Sur présentation de facture, payable sur réception</fullName>
                </value>
                <value>
                    <fullName>Sur présentation de facture, payable net 10 jours</fullName>
                </value>
                <value>
                    <fullName>Sur présentation de facture, payable net 30 jours</fullName>
                </value>
                <value>
                    <fullName>8 jours après réception</fullName>
                </value>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>30 days from reception</fullName>
                </value>
                <value>
                    <fullName>A 45 jours</fullName>
                </value>
                <value>
                    <fullName>A 60 jours</fullName>
                </value>
                <value>
                    <fullName>Upon IRAS approval</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conds_remuneration__c</fullName>
        <label>Conditions de rémunération</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pourcentage du FI du client</fullName>
                </value>
                <value>
                    <fullName>Pourcentage du FI du consortium</fullName>
                </value>
                <value>
                    <fullName>Pourcentage du CIR</fullName>
                </value>
                <value>
                    <fullName>Pourcentage de l&apos;optimisation du CIR</fullName>
                </value>
                <value>
                    <fullName>Pourcentage des économies réalisées</fullName>
                </value>
                <value>
                    <fullName>Forfait</fullName>
                </value>
                <value>
                    <fullName>Mix Forfait + % FI client</fullName>
                </value>
                <value>
                    <fullName>Mix Forfait + % FI consortium</fullName>
                </value>
                <value>
                    <fullName>Mix</fullName>
                </value>
                <value>
                    <fullName>Barème par tranche</fullName>
                </value>
                <value>
                    <fullName>Pourcentage</fullName>
                </value>
                <value>
                    <fullName>Forfait + Pourcentage</fullName>
                </value>
                <value>
                    <fullName>Pourcentage du remboursement URSSAF</fullName>
                </value>
                <value>
                    <fullName>Flat percentage</fullName>
                </value>
                <value>
                    <fullName>Increasing percentage</fullName>
                </value>
                <value>
                    <fullName>Decreasing percentage</fullName>
                </value>
                <value>
                    <fullName>% (success fee)</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contrat__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contrat</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Missions</relationshipLabel>
        <relationshipName>Missions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contrat_signe_par__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contrat signé par</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Missions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ControleFiscal__c</fullName>
        <description>Contrôle fiscal</description>
        <label>Fiscalização</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Não</fullName>
                </value>
                <value>
                    <fullName>Sim - Em andamento</fullName>
                </value>
                <value>
                    <fullName>Sim - Finalizado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cout_de_Prod_Ext_Cslt__c</fullName>
        <label>Coût de Prod Ext Cslt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_de_Prod_GC__c</fullName>
        <label>Coût de Prod GC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_de_Prod_Total__c</fullName>
        <formula>(Cout_de_Prod_GC__c  +  Cout_de_Prod_Ext_Cslt__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coût de Prod Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Creances__c</fullName>
        <label>Créances</label>
        <summarizedField>Facture__c.Montant_creance_HT__c</summarizedField>
        <summaryForeignKey>Facture__c.Mission__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DataEnvioPrevia__c</fullName>
        <description>Data de previsão envio prévia</description>
        <label>Data de previsão envio prévia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_de_envio_ao_orgao_responsavel__c</fullName>
        <label>Data de envio ao orgão responsável</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_de_validacao_do_cliente__c</fullName>
        <label>Data de validação do cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateControleDossierComplet__c</fullName>
        <description>Date de contrôle du dossier complet</description>
        <label>Data controle qualidade dossiê</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateEnvoiValorise__c</fullName>
        <label>Data de envio da valorização</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateFinalisationDossier__c</fullName>
        <label>Data finalização dossiê</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateFinalisationPerimtre__c</fullName>
        <label>Data de finalização da preparação</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatePresentationClient__c</fullName>
        <description>Date de présentation Client</description>
        <label>Data de apresentação ao cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatePrevisionEnvoiValorise__c</fullName>
        <description>Date de prévision d&apos;envoi valorisé</description>
        <label>Data de previsão envio valorização</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatePrevisionFinalisationDossier__c</fullName>
        <description>Date de prévision de la finalisation du dossier</description>
        <label>Data previsão de finalização do dossiê</label>
        <type>Date</type>
    </fields>
</CustomObject>